tests/fail/va_args_nend.zf
extc foo(a: int, __c_va_args, b: int): int;